# week-2-good-bad-code

./: .gitignore  README.md  pyproject.toml
data/: exercise_20_data.txt
src/pytest_tutorial/: add_numbers.py
src/pytest_tutorial/refactor_exercise/: exercise_00_linting.py  exercise_01_bad_naming.py  exercise_02_comment_abuse.py  exercise_05_typing.py  exercise_07_mystery_tuple.py  exercise_09_readaloud.py  exercise_10_phone_word.py  exercise_19_test_basic.py  exercise_20_histlib.py  exercise_25_depreciation_what_to_test.py  exercise_26_spoiler_for_25.py  exercise_30_setup_tear_down.py  exercise_35_mocking.py  exercise_36_freezing.py  exercise_50_worse_prime_printer.py
src/pytest_tutorial/slide_example/: example-08-explain_in_code.py  example_09_count_animals.py  example_1.py  example_10_do_one_thing.py  exercise_20_ideal_matplotlib.py
src/pytest_tutorial/slide_example/example_50_srp/: version1.py  version2.py
tests/: conftest.py  test_19_basics.py  test_add_numbers.py  test_exercise_30_bad.py  test_exercise_30_setup_teardown.py  test_exercise_35_mocking.py  test_exercise_36_freezing.py
