[tool.poetry]
name = "pytest-tutorial"
version = "0.1.0"
description = ""
authors = ["Piti Ongmongkolkul <piti118@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.7"
pytest = "^7.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
