[tool.poetry]
name = "pytest-tutorial"
version = "0.1.0"
description = ""
authors = ["Piti Ongmongkolkul <piti118@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
pytest = "^7.2.1"
requests = "^2.31.0"
pytest-mock = "^3.12.0"
freezegun = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
